Host the Blazor Application in the Server Project. Add GitHub Authentication Login Flow on Blazor-side.

--- a/src/Blazor/RebacExperiments.Blazor/Components/RedirectToLogin/RedirectToLogin.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Components/RedirectToLogin/RedirectToLogin.razor
@@ -6,7 +6,7 @@
     {
         var baseRelativePath = Navigation.ToBaseRelativePath(Navigation.Uri);
 
-        if(string.IsNullOrWhiteSpace(baseRelativePath))
+        if (string.IsNullOrWhiteSpace(baseRelativePath) || string.Equals("index.html", baseRelativePath, StringComparison.InvariantCultureIgnoreCase))
         {
             Navigation.NavigateTo($"Login", true);
         } else
