--- a/src/Blazor/RebacExperiments.Blazor/Pages/Login.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Pages/Login.razor
@@ -41,7 +41,7 @@
                              <div class="separator">or</div>
                          </FluentGridItem>
                          <FluentGridItem xs="12">
-                             <LinkButton Href="odata/login-github()" Style="width: 100%">Login with GitHub</LinkButton>
+                             <LinkButton Appearance="Appearance.Accent" Href="odata/login-github()" Style="width: 100%">Login with GitHub</LinkButton>
                          </FluentGridItem>
                          <FluentMessageBarProvider Section="@App.MESSAGES_TOP" />
                      </FluentGrid>
