Add Return Url to OAuth Dance

--- a/src/Blazor/RebacExperiments.Blazor/Pages/RedirectExternal.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Pages/RedirectExternal.razor
@@ -8,3 +8,5 @@
 @inject NavigationManager NavigationManager
 @inject CustomAuthenticationStateProvider AuthStateProvider
 @inject ApplicationErrorMessageService ApplicationErrorMessageService
+
+<FluentMessageBarProvider Section="@App.MESSAGES_TOP" />
